--- a/sections/product-alternate-template.liquid
+++ b/sections/product-alternate-template.liquid
@@ -339,8 +339,7 @@ Dien: Added blocks.
           "label": "Number Range",
           "options": [
             { "value": "positive_no_zero", "label": "Positive values, except zero" },
-            { "value": "positive", "label": "Positive values, including zero" },
-            { "value": "all_integers", "label": "Positive and negative values, including zero" }
+            { "value": "positive", "label": "Positive values, including zero" }
           ],
           "info": "Applicable only for type Number.",
           "default": "positive_no_zero"
