--- a/templates/page.order-form.liquid
+++ b/templates/page.order-form.liquid
@@ -1,7 +1,7 @@
 <style>
     .bulk-order {
-        width: 80%;
-        margin: 20px auto;
+        /*width: 80%;*/
+        /*margin: 20px auto;*/
         font-size: 1.2rem;
     }
     .bulk-order__header {
@@ -12,83 +12,126 @@
         width: 100%;
         background-color: #f5f4f1;
     }
-    .bulk-order__row:after {
-        content: " ";
-        display: table;
-        clear: both;
-    }
-    .bulk-order__column {
-    }
+    /*.bulk-order__row:after {*/
+        /*content: " ";*/
+        /*display: table;*/
+        /*clear: both;*/
+    /*}*/
     .bulk-order__title {
         width: 100%;
         padding: 20px 28px 2px 28px;
         font-size: 1.6em;
         font-family: Baskerville MT, "Baskerville Old Face", "Hoefler Text", Garamond, "Times New Roman", serif;
     }
+    .bulk-order__content {
+        display: flex;
+        flex-wrap: nowrap;
+    }
+    .bulk-order__box {
+        margin: 0 28px;
+    }
     .bulk-order__image {
         width: 100%;
-        max-height: 168px;
-        padding: 0 28px;
-        float: left;
+        /*max-height: 168px;*/
+        /*padding-left: 28px;*/
+        /*float: left;*/
     }
     .bulk-order__description {
         width: 100%;
-        max-height: 168px ;
-        padding: 0 28px;
+        /*max-height: 168px ;*/
+        /*padding: 0 28px;*/
         margin-bottom: 18px;
-        float: left;
+        /*float: left;*/
         overflow: auto;
     }
     .bulk-order__price {
         width: 100%;
-        padding: 0 28px;
+        /*padding-left: 28px;*/
         margin-bottom: 18px;
-        float: left;
+        /*float: left;*/
         font-size: 1.2em;
         font-weight: bold;
     }
     .bulk-order__options-list {
         width: 100%;
-        min-height: 110px;
-        float: left;
+        display: flex;
+        flex-wrap: nowrap;
+        margin-bottom: 18px;
+        /*padding: 0 28px;*/
+        /*min-height: 110px;*/
+        /*float: left;*/
     }
     .bulk-order__option {
-        float: left;
-        margin: 0 30px;
+        /*float: left;*/
+        margin-right: 8px;
     }
     .bulk-order__quantity {
         width: 100%;
-        padding: 0 28px;
-        float: left;
+        /*padding-right: 28px;*/
+        /*float: left;*/
     }
     .bulk-order__add-button {
-        float: left;
+        /*float: left;*/
         width: 100%;
-        padding: 0 28px;
-        margin-bottom: 18px;
+        /*padding-right: 28px;*/
+        margin-bottom: 28px;
         font-size: 0.9em;
     }
-    .bulk-order__content .bulk-order__row:nth-child(4n+1),
-    .bulk-order__content .bulk-order__row:nth-child(4n+2) {
+    .bulk-order__main .bulk-order__row:nth-child(4n+1),
+    .bulk-order__main .bulk-order__row:nth-child(4n+2) {
         background-color: #edece9;
+    }
+    @media only screen and (max-width: 749px) {
+        .bulk-order {
+            font-size: 1.1rem;
+        }
+        .bulk-order__content {
+            flex-direction: column;
+            align-items: center;
+        }
+        .box--middle {
+            max-width: 320px;
+        }
+        .bulk-order__options-list {
+            flex-direction: column;
+        }
+    }
+    @media only screen and (min-width: 750px) {
+        .bulk-order__content {
+            flex-direction: row;
+        }
+        .bulk-order__box {
+            min-height: 270px;
+        }
+        .box--start {
+            flex-basis: 20%;
+        }
+        .box--middle {
+            flex-basis: 50%;
+        }
+        .box--end {
+            flex-basis: 20%;
+        }
+        .bulk-order__options-list {
+            flex-direction: row;
+        }
     }
 </style>
 
 {% assign collection = collections.pf-bikes %}
 
 {% unless collection.products_count <= 0 %}
-<div class="bulk-order">
+<div class="bulk-order page-width">
     <header class="bulk-order__header">Bulk Order</header>
-    <div class="bulk-order__content">
+    <div class="bulk-order__main">
     {% for product in collection.products %}
         {% if product.available %}
             <!-- Product name -->
             <div class="bulk-order__row"><p class="bulk-order__title">{{ product.title }}</p></div>
-            <div class="bulk-order__row">
-                <div class="bulk-order__column">
+            <div class="bulk-order__row bulk-order__content">
+                <div class="bulk-order__box box--start">
                     <!-- Image -->
-                    <div class="bulk-order__image"><img src="{{ product.featured_image | product_img_url: '240x240', format: 'pjpg' }}" alt="{{ product.title }}"></div>
-
+                    <div class="bulk-order__image"><img src="{{ product.featured_image | product_img_url: '320x320', format: 'pjpg' }}" alt="{{ product.title }}"></div>
                     <!-- Price -->
                     <div class="bulk-order__price">
                         {% if product.price_varies %}
@@ -98,7 +141,7 @@
                         {% endif %}
                     </div>
                 </div>
-                <div class="bulk-order__column">
+                <div class="bulk-order__box box--middle">
                     <!-- Description -->
                     <div class="bulk-order__description">{{ product.description }}</div>
 
@@ -122,23 +165,22 @@
                                 {{ first_variant.option1 }};{{ first_variant.option2 }};{{ first_variant.option3 }}
                             {% endcapture %}
                             {% assign first_variant_options = options_string | strip | split: ';' %}
-                            <div class="bulk-order__option">
                             {% for option in product.options_with_values %}
+                            <div class="bulk-order__option">
                                 {% assign option_index = forloop.index0 %}
-                                    <label for="{{ product.id }}-{{ option.name }}">{{ option.name }}
-                                        <select name="options[{{ option.name }}]" id="{{ product.id }}-{{ option.name }}">
-                                        {% for value in option.values %}
-                                            <option value="{{ value }}" {% if first_variant_options[option_index] == value %} selected {% endif %}>{{ value }}</option>
-                                        {% endfor %}
-                                        </select>
-                                    </label>
-                            {% endfor %}
+                                    <label for="{{ product.id }}-{{ option.name }}">{{ option.name }}</label>
+                                    <select name="options[{{ option.name }}]" id="{{ product.id }}-{{ option.name }}">
+                                    {% for value in option.values %}
+                                        <option value="{{ value }}" {% if first_variant_options[option_index] == value %} selected {% endif %}>{{ value }}</option>
+                                    {% endfor %}
+                                    </select>
                             </div>
+                            {% endfor %}
                         {% endunless %}
                     {% endif %}
                     </div>
                 </div>
-                <div class="bulk-order__column">
+                <div class="bulk-order__box box--end">
                     <!-- Quantity -->
                     <div class="bulk-order__quantity">
                         <label for="Quantity-{{ product.id }}">{{ 'products.product.quantity' | t }}
