--- a/snippets/product-form.liquid
+++ b/snippets/product-form.liquid
@@ -34,7 +34,7 @@ Added quantity-in-cart tooltip.
         display: block;
         position: absolute;
         bottom: 115%;
-        left: 0%;
+        right: -10%;
         padding: 2px 6px;
         border: 1px solid #ffa500;
         border-radius: 4px;
@@ -50,7 +50,7 @@ Added quantity-in-cart tooltip.
         display: block;
         position: absolute;
         bottom: 105%;
-        left: 50%;
+        left: 25%;
         width: 7px;
         height: 7px;
         background-color: #ffffff;
